--- a/trs/lib/trs_web/templates/layout/app.html.eex
+++ b/trs/lib/trs_web/templates/layout/app.html.eex
@@ -1,5 +1,15 @@
 <main role="main" class="container">
-  <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+  <%= if get_flash(@conn, :info) do %>
+    <div class="bg-blue-500 border border-blue-200 text-white pl-4 pr-8 py-3 rounded relative" role="alert">
+      <span class="block sm:inline"><%= get_flash(@conn, :info) %></span>
+    </div>
+  <% end %>
+  <%= if get_flash(@conn, :error) do %>
+    <div class="bg-red-500 border border-red-200 text-white pl-4 pr-8 py-3 rounded relative" role="alert">
+      <strong class="font-bold"> Oops! </strong>
+      <span class="block sm:inline"><%= get_flash(@conn, :error) %></span>
+    </div>
+  <% end %>
+
   <%= @inner_content %>
 </main>
