--- a/trs/lib/trs_web/templates/layout/root.html.leex
+++ b/trs/lib/trs_web/templates/layout/root.html.leex
@@ -1,193 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "TRS", suffix: " · Phoenix Framework" %>
-    <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>" />
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <div class="h-screen w-screen flex bg-gray-200">
-      <%# Menu Lateral %>
-      <aside class="hidden lg:flex flex-col items-center bg-white text-gray-700 shadow h-full">
-        <div class="h-16 flex items-center w-full">
-            <a class="h-6 w-6 mx-auto" href="http://svelte.dev/">
-                <img class="h-6 w-6 mx-auto"
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Svelte_Logo.svg/512px-Svelte_Logo.svg.png"
-                    alt="svelte logo" />
-            </a>
+    <div>
+      <%= if @conn.assigns[:current_user] do %>
+        <div>
+          <nav class="bg-gray-800">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+              <div class="flex items-center justify-between h-16">
+                <div class="flex items-center">
+                  <div class="flex-shrink-0">
+                    <img class="h-8 w-8" src="https://tailwindui.com/img/logos/workflow-mark-indigo-500.svg" alt="Workflow">
+                  </div>
+                  <div class="hidden md:block">
+                    <div class="ml-10 flex items-baseline space-x-4">
+                      <a href="#"
+                        class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900">Home</a>
+                      <a href="#"
+                        class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">Minha Lista</a>
+                      <a href="#"
+                        class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="hidden md:block">
+                  <div class="ml-4 flex items-center md:ml-6">
+                    <%= link "Logout", class: "bg-gray-800 p-1 rounded-full text-gray-100 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white", to: Routes.user_session_path(@conn, :delete), method: :delete %>
+                  </div>
+                </div>
+                <div class="-mr-2 flex md:hidden">
+                  <!-- Mobile menu button -->
+                  <button
+                    class="bg-gray-800 inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <span class="sr-only">Menu</span>
+                    <!--
+                      Heroicon name: menu
+
+                      Menu open: "hidden", Menu closed: "block"
+                      -->
+                    <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+                      viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                    <!--
+                      Heroicon name: x
+
+                      Menu open: "block", Menu closed: "hidden"
+                      -->
+                    <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+                      viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!--
+              Mobile menu, toggle classes based on menu state.
+
+              Open: "block", closed: "hidden"
+              -->
+            <div class="hidden md:hidden">
+              <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
+                <a href="#"
+                  class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900">Home</a>
+                <a href="#"
+                  class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Minha Lista</a>
+                <a href="#"
+                  class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
+              </div>
+              <div class="pt-4 pb-3 border-t border-gray-700">
+                <div class="flex items-center px-5">
+                  <%= link "Logout", class: "bg-gray-800 p-1 rounded-full text-gray-100 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white", to: Routes.user_session_path(@conn, :delete), method: :delete %>
+                </div>
+              </div>
+            </div>
+          </nav>
+          <header class="bg-white shadow">
+            <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+              <h1 class="text-3xl font-bold leading-tight text-gray-900">
+                Home
+              </h1>
+            </div>
+          </header>
         </div>
-        <ul>
-            <li class="hover:bg-gray-100">
-                <a href="." class="h-16 px-6 flex flex justify-center items-center w-full
-          focus:text-orange-500">
-                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <polyline points="22 12 16 12 14 15 10 15 8 12 2 12"></polyline>
-                        <path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0
-              2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0
-              0-1.79 1.11z"></path>
-                    </svg>
-                </a>
-            </li>
-            <li class="hover:bg-gray-100">
-                <a href="." class="h-16 px-6 flex flex justify-center items-center w-full
-          focus:text-orange-500">
-                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
-                    </svg>
-                </a>
-            </li>
-            <li class="hover:bg-gray-100">
-                <a href="." class="h-16 px-6 flex flex justify-center items-center w-full
-          focus:text-orange-500">
-                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="3"></circle>
-                        <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1
-              0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0
-              0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2
-              2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0
-              0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1
-              0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0
-              0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65
-              0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0
-              1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0
-              1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2
-              0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0
-              1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0
-              2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0
-              0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65
-              1.65 0 0 0-1.51 1z"></path>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-        <div class="mt-auto h-16 flex items-center w-full">
-            <button class="h-16 w-10 mx-auto flex flex justify-center items-center
-        w-full focus:text-orange-500 hover:bg-red-200 focus:outline-none">
-                <svg class="h-5 w-5 text-red-700" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                    stroke-linejoin="round">
-                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                    <polyline points="16 17 21 12 16 7"></polyline>
-                    <line x1="21" y1="12" x2="9" y2="12"></line>
-                </svg>
-            </button>
+      <% end %>
+      <main>
+        <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+          <div class="px-4 sm:px-0">
+            <%= @inner_content %>
+          </div>
         </div>
-      </aside>
-
-
-      <div class="flex-1 flex flex-col">
-        <%# Menu de cima  %>
-        <nav class="px-4 flex justify-between bg-white h-16 border-b-2">
-            <ul class="flex items-center lg:hidden">
-                <li class="h-6 w-6">
-                    <img class="h-full w-full mx-auto"
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Svelte_Logo.svg/512px-Svelte_Logo.svg.png"
-                        alt="svelte logo" />
-                </li>
-            </ul>
-            <ul class="flex items-center">
-                <li>
-                    <h1 class="pl-10 lg:pl-0 text-gray-700">Svelte</h1>
-                </li>
-            </ul>
-            <ul class="flex items-center">
-                <li class="pr-4">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="feather feather-bell">
-                        <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
-                        <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
-                    </svg>
-                </li>
-                <li class="h-8 w-8">
-                    <img class="h-full w-full rounded-full mx-auto"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="profile woman" />
-                </li>
-            </ul>
-          <%= render "_user_menu.html", assigns %>
-        </nav>
-
-        <%# Conteúdo %>
-        <article class="container mx-auto main-section">
-          <%= @inner_content %>
-        </article>
+      </main>
     </div>
-
-    <%# Menu de baixo, mobile %>
-    <nav class="fixed bottom-0 w-full border bg-white lg:hidden flex overflow-x-auto">
-        <a href="." class="flex flex-col flex-grow items-center justify-center
-      overflow-hidden whitespace-no-wrap text-sm transition-colors
-      duration-100 ease-in-out hover:bg-gray-200 focus:text-orange-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <polyline points="22 12 16 12 14 15 10 15 8 12 2 12"></polyline>
-                <path d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0
-          2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"></path>
-            </svg>
-            <span class="hidden text-sm capitalize">Inbox</span>
-        </a>
-        <a href="." class="flex flex-col flex-grow items-center justify-center
-      overflow-hidden whitespace-no-wrap text-sm transition-colors
-      duration-100 ease-in-out hover:bg-gray-200 text-orange-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-github">
-                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0
-          0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77
-          5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7
-          0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0
-          0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
-            </svg>
-            <span class="text-sm capitalize">github</span>
-        </a>
-        <a href="." class="flex flex-col flex-grow items-center justify-center
-      overflow-hidden whitespace-no-wrap text-sm transition-colors
-      duration-100 ease-in-out hover:bg-gray-200 focus:text-orange-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                class="feather feather-bookmark">
-                <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
-            </svg>
-            <span class="hidden text-sm capitalize">bookmark</span>
-        </a>
-        <a href="." class="flex flex-col flex-grow items-center justify-center
-      overflow-hidden whitespace-no-wrap text-sm transition-colors
-      duration-100 ease-in-out hover:bg-gray-200 focus:text-orange-500">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="3"></circle>
-                <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83
-          2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65
-          0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0
-          0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2
-          2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0
-          0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0
-          4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2
-          0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0
-          1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1
-          1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0
-          0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0
-          1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0
-          0-1.51 1z"></path>
-            </svg>
-            <span class="hidden text-sm capitalize">Settings</span>
-        </a>
-      </nav>
-    </div>
-
-
-
-
   </body>
 </html>
