--- a/trs/lib/trs_web/templates/user_registration/new.html.eex
+++ b/trs/lib/trs_web/templates/user_registration/new.html.eex
@@ -1,26 +1,44 @@
-<h1>Register</h1>
-
-<%= form_for @changeset, Routes.user_registration_path(@conn, :create), fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
-
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
-
-  <div>
-    <%= submit "Register" %>
+<%= if @changeset.action do %>
+  <div class="bg-yellow-500 border border-yellow-200 text-white pl-4 pr-8 py-3 rounded relative" role="alert">
+    <strong class="font-bold"> Oops, algo deu errado! </strong>
+    <span class="block sm:inline"> Por favor, confira os erros abaixo. </span>
   </div>
 <% end %>
 
-<p>
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+<div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900"> Faça o seu cadastro </h2>
+      <p class="mt-2 text-center text-sm text-gray-600">
+        <%= link "já possui uma conta?", class: "font-medium text-indigo-600 hover:text-indigo-500", to: Routes.user_session_path(@conn, :new) %>
+      </p>
+    </div>
+
+    <%= form_for @changeset, Routes.user_registration_path(@conn, :create), [class: "mt-8 space-y-6"], fn f -> %>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <%= label f, :name, class: "sr-only" do "Nome" end %>
+          <%= text_input f, :name, [required: true, placeholder: "Nome", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+          <%= error_tag f, :name %>
+        </div>
+        <div>
+          <%= label f, :email, class: "sr-only" %>
+          <%= email_input f, :email, [required: true, placeholder: "Email", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+          <%= error_tag f, :email %>
+        </div>
+        <div>
+          <%= label f, :password, class: "sr-only" do "Senha" end %>
+          <%= password_input f, :password, [required: true, placeholder: "Senha", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+          <%= error_tag f, :password %>
+        </div>
+      </div>
+
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          Cadastrar
+        </button>
+      </div>
+    <% end %>
+  </div>
+</div>
