--- a/trs/lib/trs_web/templates/user_session/new.html.eex
+++ b/trs/lib/trs_web/templates/user_session/new.html.eex
@@ -1,27 +1,55 @@
-<h1>Log in</h1>
-
-<%= form_for @conn, Routes.user_session_path(@conn, :create), [as: :user], fn f -> %>
-  <%= if @error_message do %>
-    <div class="alert alert-danger">
-      <p><%= @error_message %></p>
-    </div>
-  <% end %>
-
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
-
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
-
-  <div>
-    <%= submit "Log in" %>
+<%= if @error_message do %>
+  <div class="bg-red-500 border border-red-200 text-white pl-4 pr-8 py-3 rounded relative" role="alert">
+    <strong class="font-bold"> Oops! </strong>
+    <span class="block sm:inline"> <%= @error_message %> </span>
   </div>
 <% end %>
+<div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900"> Faça o seu login </h2>
+      <p class="mt-2 text-center text-sm text-gray-600">
+        ou
+        <%= link "crie sua conta", class: "font-medium text-indigo-600 hover:text-indigo-500", to: Routes.user_registration_path(@conn, :new) %>
+      </p>
+    </div>
 
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+    <%= form_for @conn, Routes.user_session_path(@conn, :create), [as: :user, class: "mt-8 space-y-6"], fn f -> %>
+      <%# <input type="hidden" name="remember" value="true"> %>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <%= label f, :email, class: "sr-only" %>
+          <%= email_input f, :email, [required: true, placeholder: "Email", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+        </div>
+        <div>
+          <%= label f, :password, class: "sr-only" do "Senha" end %>
+          <%= password_input f, :password, [required: true, placeholder: "Senha", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+        </div>
+      </div>
+
+      <div class="flex items-center justify-between">
+        <div class="flex items-center">
+          <%= checkbox f, :remember_me, [class: "h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"] %>
+          <%= label f, :remember_me, class: "ml-2 block text-sm text-gray-900" do "Lembrar de mim por 60 dias" end %>
+        </div>
+
+        <div class="text-sm">
+          <%= link "Esqueceu a senha?", class: "font-medium text-indigo-600 hover:text-indigo-500", to: Routes.user_reset_password_path(@conn, :new) %>
+        </div>
+      </div>
+
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            <!-- Heroicon name: lock-closed -->
+            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+            </svg>
+          </span>
+          Autenticar
+        </button>
+      </div>
+    <% end %>
+  </div>
+</div>
