--- a/trs/lib/trs_web/templates/user_reset_password/edit.html.eex
+++ b/trs/lib/trs_web/templates/user_reset_password/edit.html.eex
@@ -1,26 +1,30 @@
-<h1>Reset password</h1>
-
-<%= form_for @changeset, Routes.user_reset_password_path(@conn, :update, @token), fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+<div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900"> Recuperar Senha </h2>
+      <p class="mt-2 text-center text-sm text-gray-600"> Preencha no formulário sua nova senha! </p>
     </div>
-  <% end %>
 
-  <%= label f, :password, "New password" %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
+    <%= form_for @conn, Routes.user_reset_password_path(@conn, :update, @token), [as: :user, method: :put, class: "mt-8 space-y-6"], fn f -> %>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <%= label f, :password, class: "sr-only" %>
+          <%= password_input f, :password, [required: true, placeholder: "Nova senha", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+          <%= error_tag f, :password %>
+        </div>
+        <div>
+          <%= label f, :password_confirmation, class: "sr-only" %>
+          <%= password_input f, :password_confirmation, [required: true, placeholder: "Conirmar senha", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+          <%= error_tag f, :password_confirmation %>
+        </div>
+      </div>
 
-  <%= label f, :password_confirmation, "Confirm new password" %>
-  <%= password_input f, :password_confirmation, required: true %>
-  <%= error_tag f, :password_confirmation %>
-
-  <div>
-    <%= submit "Reset password" %>
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          Redefinir Senha
+        </button>
+      </div>
+    <% end %>
   </div>
-<% end %>
-
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+</div>
