--- a/trs/lib/trs_web/templates/user_reset_password/new.html.eex
+++ b/trs/lib/trs_web/templates/user_reset_password/new.html.eex
@@ -1,15 +1,30 @@
-<h1>Forgot your password?</h1>
+<div class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900"> Esqueceu sua senha? </h2>
+      <p class="mt-2 text-center text-sm text-gray-600"> Não se preocupe, vamos enviar instruções por email. </p>
+    </div>
 
-<%= form_for :user, Routes.user_reset_password_path(@conn, :create), fn f -> %>
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+    <%= form_for @conn, Routes.user_reset_password_path(@conn, :create), [class: "mt-8 space-y-6"], fn f -> %>
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <%= label f, :email, class: "sr-only" %>
+          <%= email_input f, :email, [required: true, placeholder: "Email", class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"] %>
+        </div>
+      </div>
 
-  <div>
-    <%= submit "Send instructions to reset password" %>
+      <div class="flex items-center justify-between">
+        <div class="text-sm">
+          <%= link "Criar minha conta", class: "font-medium text-indigo-600 hover:text-indigo-500", to: Routes.user_registration_path(@conn, :new) %>
+        </div>
+      </div>
+
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          Enviar Instruções
+        </button>
+      </div>
+    <% end %>
   </div>
-<% end %>
-
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+</div>
