Ajustando interesses e telas de cadastro de interesse de um usuário

--- a/trs/lib/trs_web/templates/layout/root.html.leex
+++ b/trs/lib/trs_web/templates/layout/root.html.leex
@@ -76,7 +76,7 @@
                   class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900">Home</a>
                 <a href="#"
                   class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Minha Lista</a>
-                <a href="#"
+                <a href="/user_interests"
                   class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
               </div>
               <div class="pt-4 pb-3 border-t border-gray-700">
