--- a/trs/lib/trs_web/live/interest_live/index.html.leex
+++ b/trs/lib/trs_web/live/interest_live/index.html.leex
@@ -8,6 +8,8 @@
     return_to: Routes.interest_index_path(@socket, :index) %>
 <% end %>
 
+<h3> Oi <%= @current_user.name %> </h3>
+
 <table class="table-auto w-full">
   <thead>
     <tr>
