--- a/trs/lib/trs_web/templates/layout/root.html.leex
+++ b/trs/lib/trs_web/templates/layout/root.html.leex
@@ -22,11 +22,9 @@
                   </div>
                   <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
-                      <a href="#"
+                      <a href="/"
                         class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900">Home</a>
-                      <a href="#"
-                        class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">Minha Lista</a>
-                      <a href="#"
+                      <a href="/user_interests"
                         class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
                     </div>
                   </div>
@@ -72,10 +70,8 @@
               -->
             <div class="hidden md:hidden">
               <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="#"
+                <a href="/"
                   class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900">Home</a>
-                <a href="#"
-                  class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Minha Lista</a>
                 <a href="/user_interests"
                   class="block px-3 py-2 rounded-md text-base font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
               </div>
