--- a/trs/lib/trs_web/templates/layout/root.html.leex
+++ b/trs/lib/trs_web/templates/layout/root.html.leex
@@ -82,13 +82,13 @@
               </div>
             </div>
           </nav>
-          <header class="bg-white shadow">
+          <%# <header class="bg-white shadow">
             <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
               <h1 class="text-3xl font-bold leading-tight text-gray-900">
                 Home
               </h1>
             </div>
-          </header>
+          </header> %>
         </div>
       <% end %>
       <main>
