Adicionando espaçamento entre o título e o conteúdo

--- a/trs/lib/trs_web/live/interest_live/index.html.leex
+++ b/trs/lib/trs_web/live/interest_live/index.html.leex
@@ -8,9 +8,9 @@
     return_to: Routes.interest_index_path(@socket, :index) %>
 <% end %>
 
-<h3> Oi <%= @current_user.name %> </h3>
+<h3> Sua lista de interesses </h3>
 
-<table class="table-auto w-full">
+<table class="table-auto w-full mt-5">
   <thead>
     <tr>
       <th class="px-3">ID</th>
