--- a/trs/lib/trs_web/live/stream_live/show.html.leex
+++ b/trs/lib/trs_web/live/stream_live/show.html.leex
@@ -1,4 +1,4 @@
-<h1>Dados da stream</h1>
+<h1>Dados da stream:</h1>
 
 <%= if @live_action in [:edit] do %>
   <%= live_modal @socket, TRSWeb.StreamLive.FormComponent,
