--- a/trs/lib/trs_web/live/stream_live/index.html.leex
+++ b/trs/lib/trs_web/live/stream_live/index.html.leex
@@ -1,4 +1,4 @@
-<h1>Streams baseadas em seus interesses</h1>
+<h1>Streams baseadas em seus interesses:</h1>
 
 <main class="w-full overflow-y-auto">
   <div id="streams">
