--- a/trs/lib/trs_web/templates/layout/root.html.leex
+++ b/trs/lib/trs_web/templates/layout/root.html.leex
@@ -23,9 +23,9 @@
                   <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                       <a href="/"
-                        class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900">Dashboard</a>
+                        class="px-3 py-2 rounded-md text-sm font-medium <%= TRSWeb.check_url_active(@conn.request_path, "/", "bg-gray-900 text-white", "text-gray-300") %>  hover:text-white hover:bg-gray-700">Dashboard </a>
                       <a href="/user_interests"
-                        class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">Interesses</a>
+                        class="px-3 py-2 rounded-md text-sm font-medium <%= TRSWeb.check_url_active(@conn.request_path, "/user_interests", "bg-gray-900 text-white", "text-gray-300") %> hover:text-white hover:bg-gray-700">Interesses</a>
                     </div>
                   </div>
                 </div>
