--- a/trs/lib/trs_web/live/stream_live/show.html.leex
+++ b/trs/lib/trs_web/live/stream_live/show.html.leex
@@ -43,7 +43,7 @@
 </div>
 
 <span class="my-5 w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-2 py-2 bg-purple-600 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:w-auto sm:text-sm">
-  <%= live_redirect "Assistir na Twitch", to: Routes.stream_index_path(@socket, :index) %>
+  <a href="https://www.twitch.tv/<%= @stream.user_name%>" target="TOP" class="cursor-pointer"> Assistir na Twitch </a>
 </span>
 <span class="my-5 w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-2 py-2 bg-gray-500 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:w-auto sm:text-sm">
   <%= live_redirect "Voltar", to: Routes.stream_index_path(@socket, :index) %>
